<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backToDashboard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/quiz_result_back_button" />

    <TextView
        android:id="@+id/quiz_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/quiz_stats"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quizStatsFirstScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="162dp"
        android:text="@string/quiz_stats_first_score"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quizStatsFirstDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="201dp"
        android:text="@string/quiz_stats_first_datetime"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quizStatsFirstQuizName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/quiz_stats_first_quiz_name"
        android:textSize="18sp" />

        <TextView
        android:id="@+id/quizStatsFirstUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:text="@string/quiz_stats_first_user"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quizStatsTop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="126dp"
        android:text="@string/quiz_stats_top_2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quizStatsTop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="164dp"
        android:text="@string/quiz_stats_top_1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quizStatsTop3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        android:text="@string/quiz_stats_top_3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quizStatsHSDatetime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="212dp"
        android:text="@string/quiz_stats_highest_datetime"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quizStatsHSScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="249dp"
        android:text="@string/quiz_stats_highest_score"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quizStatsHSUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="256dp"
        android:text="@string/quiz_stats_highest_user"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="238dp"
        android:background="@android:color/darker_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:background="@android:color/darker_gray" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="73dp"
        android:background="@android:color/darker_gray" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="200dp"
        android:background="@android:color/darker_gray" />

</RelativeLayout>