<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|fill_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quizQuestionWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:text="@string/quiz_question"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/answerA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/quiz_answer_a" />

        <Button
            android:id="@+id/answerB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/quiz_answer_b" />

        <Button
            android:id="@+id/answerC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/answerB"
            android:layout_below="@+id/answerB"
            android:layout_marginTop="25dp"
            android:text="@string/quiz_answer_c" />

        <Button
            android:id="@+id/answerD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/quiz_answer_d" />

    </LinearLayout>

</RelativeLayout>