<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.seclass.sdpvocabquiz.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_tv"
            style="@style/register_style"
            android:layout_width="match_parent"
            android:text="@string/register_tv" />

        <EditText
            android:id="@+id/username_et_2"
            style="@style/username_style"
            android:layout_width="match_parent"
            android:layout_alignStart="@+id/email_et"
            android:layout_below="@+id/register_tv"
            android:layout_marginTop="20dp"
            android:hint="@string/username_et"
            android:inputType="text" />

        <EditText
            android:id="@+id/major_et"
            style="@style/username_style"
            android:layout_width="match_parent"
            android:layout_alignStart="@+id/register_button_2"
            android:layout_below="@+id/username_et_2"
            android:layout_marginTop="20dp"
            android:hint="@string/major_et"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:gravity="center_vertical|left"
                android:text="Seniority:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="fill"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:id="@+id/email_et"
            style="@style/username_style"
            android:layout_width="match_parent"
            android:layout_alignEnd="@+id/register_button_2"
            android:layout_below="@+id/spinner"
            android:layout_marginTop="20dp"
            android:hint="@string/email_et"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/register_button_2"
            style="@style/username_style"
            android:layout_width="match_parent"
            android:layout_alignStart="@+id/seniority_et"
            android:layout_below="@+id/email_et"
            android:layout_marginTop="30dp"
            android:text="@string/register_button" />

    </LinearLayout>

</RelativeLayout>